--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Krista D. Chisholm"
-  pronouns         : # example: "she/her"  
+  pronouns         : "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Boca Raton, FL"
   employer         : # URL
@@ -69,7 +69,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : # Username for X / Twitter
+  twitter          : "kristadulanyphd"
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
